[gd_scene load_steps=7 format=3 uid="uid://uh16to4u3v10"]

[ext_resource type="Script" uid="uid://d4ia61qi0cbin" path="res://Scenes/Entitiesobject.gd" id="1_5jyb3"]
[ext_resource type="Script" uid="uid://bwhdiepo5jj0u" path="res://Scenes/Entities/simple_physics_area.gd" id="2_buhsh"]
[ext_resource type="Texture2D" uid="uid://ejf7qeub7usi" path="res://Assets/Graphics/Textures/Galleon.png" id="3_rif75"]
[ext_resource type="Script" uid="uid://tnuibtauyqsa" path="res://Scenes/Entities/input_movement.gd" id="4_buhsh"]
[ext_resource type="Script" uid="uid://b74k3hljc2ftk" path="res://Scenes/Entities/moving_nodes.gd" id="5_rif75"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eju28"]
radius = 24.0

[node name="Entity" type="Node2D"]
script = ExtResource("1_5jyb3")

[node name="Mover" type="Area2D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_buhsh")
navigation = 1
max_speed = 100.0
acceleration = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mover"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_eju28")

[node name="KnockbackTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="InputMovement" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_buhsh")

[node name="MovingNodes" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_rif75")

[node name="MoverSprite" type="Sprite2D" parent="MovingNodes"]
unique_name_in_owner = true
texture = ExtResource("3_rif75")

[node name="Camera2D" type="Camera2D" parent="MovingNodes"]
